--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css" rel="stylesheet" />
+  <link
+  href="https://cdn.jsdelivr.net/npm/@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css"
+  rel="stylesheet"
+/>
 
 </head>
 
